src/gui/wgsl/get_wgsl_number.cpp
/* Generated by re2c 4.5.1 on Mon Apr  6 05:46:04 2026 */
#include "get_wgsl_number.hpp"

namespace mewo::language {

TextEditor::Iterator get_wgsl_number(TextEditor::Iterator start, TextEditor::Iterator end) {
  TextEditor::Iterator i = start;
  TextEditor::Iterator marker;

  {
    ImWchar yych;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy3;
      case '0': goto yy4;
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy6;
      default: goto yy1;
    }
  yy1:
    ++i;
  yy2: { return start; }
  yy3:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy7;
      default: goto yy2;
    }
  yy4:
    ++i;
    marker = i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy7;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy9;
      case 'X':
      case 'x': goto yy12;
      case 'i':
      case 'u': goto yy13;
      default: goto yy8;
    }
  yy5: { return i; }
  yy6:
    ++i;
    marker = i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy7;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy6;
      case 'E':
      case 'e': goto yy11;
      case 'f':
      case 'h':
      case 'i':
      case 'u': goto yy13;
      default: goto yy5;
    }
  yy7:
    ++i;
    marker = i;
    yych = i < end ? *i : 0;
  yy8:
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy7;
      case 'E':
      case 'e': goto yy11;
      case 'f':
      case 'h': goto yy13;
      default: goto yy5;
    }
  yy9:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy7;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy9;
      case 'E':
      case 'e': goto yy11;
      case 'f':
      case 'h': goto yy13;
      default: goto yy10;
    }
  yy10:
    i = marker;
    goto yy5;
  yy11:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '+':
      case '-': goto yy14;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy15;
      default: goto yy10;
    }
  yy12:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy16;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f': goto yy17;
      default: goto yy10;
    }
  yy13:
    ++i;
    goto yy5;
  yy14:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy15;
      default: goto yy10;
    }
  yy15:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9': goto yy15;
      case 'f':
      case 'h': goto yy13;
      default: goto yy5;
    }
  yy16:
    ++i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f': goto yy18;
      default: goto yy10;
    }
  yy17:
    ++i;
    marker = i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '.': goto yy18;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f': goto yy17;
      case 'P':
      case 'p': goto yy11;
      case 'i':
      case 'u': goto yy13;
      default: goto yy5;
    }
  yy18:
    ++i;
    marker = i;
    yych = i < end ? *i : 0;
    switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f': goto yy18;
      case 'P':
      case 'p': goto yy11;
      case 'h': goto yy13;
      default: goto yy5;
    }
  }
}

}  // namespace mewo::language
